--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-p5": "^1.3.26"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.9"
+    "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18"
   }
 }
